# financial_calc_vx

./: README.md  main.py  pyproject.toml
financial_calc/: __init__.py  calculator.py
tests/: test_calculator.py
