[project]
name = "financial_calc"
version = "0.1.0"
description = "Финансовый калькулятор для расчёта процентов и налогов"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = []
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
financial-calc = "financial_calc.calculator:main"

[tool.uv]
dev-dependencies = ["pytest"]